syntax = "proto3";

package pb;

option go_package = "github.com/Odvin/go-accounting-service/pb";

message CreateClientProfileRequest {
    string name = 1;
    string surname = 2;
    string email = 3;
    string password = 4;
}

message CreateClientProfileResponse {
  string id = 1;
}