syntax = "proto3";

package pb;

import "rpc_create_client_profile.proto";
import "rpc_create_client_token.proto";

option go_package = "github.com/Odvin/go-accounting-service/pb";

service Accounting {
  rpc CreateClientProfile (CreateClientProfileRequest) returns (CreateClientProfileResponse) {}
  rpc CreateClientToken (CreateClientTokenRequest) returns (CreateClientTokenResponse) {}
}

